--- a/templates/about.html
+++ b/templates/about.html
@@ -15,7 +15,7 @@
   <link rel="apple-touch-icon" sizes="180x180" href="./static/assets/apple-icon-180x180.png">
   <link href="./static/assets/Bolt.ico" rel="icon">
 
-  <title>Title page</title>  
+  <title>Hammad Ali: About Me</title>  
 
 <link href="./static/main.3f6952e4.css" rel="stylesheet"></head>
 
@@ -73,7 +73,7 @@
                   Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Phasellus iaculis magna sagittis elit sagittis, at hendrerit lorem venenatis. Morbi accumsan iaculis blandit. Cras ultrices hendrerit nisl.</p>
                 </div>
                 <div class="col-xs-12 col-md-6">
-                  <img src="./static/assets/images/profil.jpg" class="img-responsive" alt="">
+                  <img src="./static/assets/images/about.jpg" class="img-responsive" alt="">
                 </div>
               </div>
             </div>
